# APE

./: .gitignore  CMakeLists.txt  README.md
include/: ape.h  common.h  kernel.h  test_gemm.h
src/: ape.cpp  gemm_fp32_auto.cpp  gemm_fp32_cublas.cpp  gemm_fp32_fp32b.cpp  gemm_fp32_fp32f.cpp  gemm_fp32_fp32t.cpp  gemm_fp32_test.cpp  gemm_fp64_cublas.cpp  gemm_int16_emu.cpp
src/kernel/: compare_fp32_to_fp64.cu
test/: test_gemm_fp32_auto.cpp  test_gemm_fp32_fp32b.cpp
